Refactor view classes and fix UI/typo bugs
Check intelliJ advice
- Add final fields and use more ViewUtils.createColumnPanel.
- Fix typos and naming and correct generics for collections and method parameters.
- Remove unused fields/prints, simplify listener wiring.
- Remove unnecessary exceptions.